compare previous commits to help fix new bug with nav menu  only appearing with toggle on mobile sizing

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  background-image: url('assets/chesapeake-bay-bridge-md-2500.jpg');
+  background-image: url("assets/chesapeake-bay-bridge-md-2500.jpg");
   background-attachment: fixed;
   background-size: cover;
 }
@@ -39,7 +39,7 @@ a {
 a:hover {
   box-shadow: #6b85d8;
 }
-img { 
+img {
   border-radius: 83%;
 }
 ul li {
@@ -70,11 +70,11 @@ ul li {
   justify-content: space-between;
 }
 
-/* ==== LOGO ==== */
-.logo h2 {
+h2 {
   font-size: 28px;
   color: var(--primary-color);
 }
+
 /* ====  NAV-MENU  ==== */
 .nav_menu_list {
   display: flex;
@@ -95,7 +95,7 @@ ul li {
 .toggle_btn {
   font-size: auto;
   font-weight: 300;
-  border-radius:1em ;
+  border-radius: 1em;
   color: var(--lg-heading);
   z-index: 4;
 }
@@ -104,13 +104,14 @@ ul li {
   display: block;
   font-size: auto;
   font-weight: 300;
-  border-radius:1em ;
+  border-radius: 1em;
   color: var(--lg-heading);
   z-index: 4;
 }
 .show {
   right: 3% !important;
 }
+
 /* ====  WRAPPER ==== */
 .wrapper {
   width: 100%;
@@ -264,9 +265,8 @@ footer {
   }
 }
 
-
 @media screen and (max-width: 768px) {
-  .logo h2 {
+  h2 {
     font-size: 23px;
   }
   .nav_menu {
@@ -317,4 +317,3 @@ footer {
     font-size: 14px;
   }
 }
-
